<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/focus"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/grade_class"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/classs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/grade_rank"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/class_type"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/grade_type"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/type2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/grade_exam"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/exam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/grade_xingzhi"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/grade_grade"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/grade_point"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/point"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/grade_gradepoint"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/gradepoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

</LinearLayout>