<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/focus"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/grade_class"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/exam_classs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/grade_rank"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/exam_rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/class_type"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/exam_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/exam_time"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/exam_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/exam_location"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/exam_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/exam_position"
            android:textColor="@color/fontcolor" />

        <TextView
            android:id="@+id/exam_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColor="@color/fontcolor" />
    </LinearLayout>

</LinearLayout>