<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="${packageName}.${activityClass}" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/div_bg"
                android:paddingBottom="5dp" >

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/start_date"
                        android:textColor="@color/fontcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/end_date"
                        android:textColor="@color/fontcolor"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/div_bg"
                    android:orientation="horizontal" >

                    <DatePicker
                        android:id="@+id/startdate"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="50"
                        android:background="#000000"
                        android:calendarViewShown="false" />

                    <DatePicker
                        android:id="@+id/enddate"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="50"
                        android:background="#000000"
                        android:calendarViewShown="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/linearLayout2"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/startsection"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <Spinner
                        android:id="@+id/endsection"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/linearLayout3"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leave_teacher"
                        android:textColor="@color/fontcolor" />

                    <TextView
                        android:id="@+id/teacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leave_teacher"
                        android:textColor="@color/fontcolor" />
                </LinearLayout>

                <EditText
                    android:id="@+id/telphone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/linearLayout4"
                    android:layout_below="@+id/linearLayout4"
                    android:layout_margin="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="5dp"
                    android:textColor="@color/fontcolor"
                    android:textCursorDrawable="@null" >
                </EditText>

                <EditText
                    android:id="@+id/reason"
                    android:layout_width="fill_parent"
                    android:layout_height="90dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/textView2"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:gravity="top"
                    android:hint=""
                    android:maxLines="5"
                    android:padding="5dp"
                    android:textColor="@color/fontcolor"
                    android:textCursorDrawable="@null" >
                </EditText>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/telphone"
                    android:padding="5dp"
                    android:text="@string/leave_reason"
                    android:textColor="@color/fontcolor" />
            </RelativeLayout>

            <Button
                android:id="@+id/leave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_btn_style"
                android:onClick="leave"
                android:text="@string/leave" >
            </Button>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/waitbar_leave"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#55000000"
        android:gravity="center"
        android:visibility="invisible" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:scaleType="matrix" />
    </LinearLayout>

</FrameLayout>