<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="5dp"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="0.99"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/fontcolor"
                android:textSize="40sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/fontcolor" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/div_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_bg2"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/fontcolor"
                android:textCursorDrawable="@null"
                android:textSize="20sp" >
            </EditText>

            <EditText
                android:id="@+id/pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_bg2"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/fontcolor"
                android:textCursorDrawable="@null"
                android:textSize="20sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/login_btn_style"
                android:onClick="login"
                android:text="登录" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/login_btn_style"
                android:onClick="regist"
                android:text="注册" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/waitbar"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#55000000"
        android:gravity="center" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:scaleType="matrix" />
    </LinearLayout>

</FrameLayout>